# realtime-chat

./: .gitignore  .pre-commit-config.yaml  README  docker-compose.yml  go.mod  go.sum
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  auth.py  chat.py  message.py  status.py
backend/app/core/: config.py  errors.py  security.py
backend/app/crud/: chat.py  message.py  user.py
backend/app/db/: deps.py  seasson.py
backend/app/models/: __init__.py  conversation_members.py  conversations.py  message.py  timestamp.py  users.py
backend/app/schemas/: auth.py  auth_scheme.py  chat.py  chat_scheme.py  message_scheme.py  user.py
backend/app/schemes/: auth.py
backend/app/services/: auth_service.py  chat_service.py  message_service.py
backend/migrations/: env.py
backend/migrations/versions/: 27cccfbdd0d2_create_users.py  3685dac9a677_create_base_models.py  aab05bcd8067_fix_users.py  b3c8f1a2d4e5_add_role_to_conversation_members.py  c4d9e2b5f6a7_add_joined_at_to_conversation_members.py
websocket/: main.go
websocket/hub/: hub.go
websocket/types/: env_variables.go
